added new arrivels tab
